--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
+blinker==1.4
 celery==4.2.2
 Flask==1.0.2
 Flask-Excel==0.0.7
+Flask-Testing==0.7.1
 gunicorn==19.9.0
+pyexcel-xls==0.5.8
 requests==2.21.0
 wtforms==2.2.1
-
-pyexcel-xls
